# dynonym

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  dynonym.toml.example
ci/: 10-trailing_whitespaces.sh
src/: cli.rs  config.rs  dns.rs  error.rs  errors.rs  http.rs  lib.rs  lock.rs  main.rs  model.rs  state.rs  types.rs
src/cli/: mod.rs  serve.rs
src/cli/configure/: default.rs  dns.rs  http.rs  mod.rs
src/cli/configure/users/: add.rs  auth.rs  mod.rs  pw.rs  rm.rs
src/cli/dns/: mod.rs  update.rs
src/cli/user/: add.rs  auth.rs  mod.rs  pw.rs  rm.rs
src/dns/: dns_update.rs  mod.rs
src/http/: errors.rs  mod.rs
src/http/routes/: dns.rs  mod.rs
src/routes/: dns.rs
